# reddit-place-script-2022

./: .env_TEMPLATE  .gitignore  README.md  auth.py  canvas_diff.py  diffstats.py  director.py  main.py  mappings.py  pyproject.toml  requirements.txt
research/: mich-ripbots-1.json  mich-ripbots-10.json  mich-ripbots-11.json  mich-ripbots-12.json  mich-ripbots-13.json  mich-ripbots-14.json  mich-ripbots-15.json  mich-ripbots-16.json  mich-ripbots-17.json  mich-ripbots-2.json  mich-ripbots-3.json  mich-ripbots-4.json  mich-ripbots-5.json  mich-ripbots-6.json  mich-ripbots-7.json  mich-ripbots-8.json  mich-ripbots-9.json  mich-ripbots.json  query-history.js
